--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="text-center justify-content-center align-self-center pt-3 ">
           <figure>
             <img class="img-top" src="img/nav-original.png" alt="Logo Directorio247">
-            <figcaption class="figure-caption text-center mt-2">Aquí encontrarás todos los productos y servicios al alcance de un clic.</figcaption>
+            <figcaption class="figure-caption text-center mt-2">Aquí encontrarás una gran cantidad de productos y servicios al alcance de un clic.</figcaption>
           </figure>
       </div>
       <div class="content-links container">
