added link and video

--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
           </figure>
       </div>
       <div class="content-links container">
+        <a class="btn btn-outline-light btn-block" href="tlf:+584141584350" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/Telefono.png" alt=""><small class="h5 float-center">Llamar</small></a>
         <a class="btn btn-outline-light btn-block" href="mailto:directorio247@gmail.com" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/Gmail.jpg" alt=""><small class="h5 float-center">Email</small></a>
-        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+584141584350&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Whatsapp</small></a>
-        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+34691387184&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Whatsapp</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+584141584350&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Gerencia de Servicios</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+34691387184&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Dep. de Desarrollo</small></a>
         <a class="btn btn-outline-light btn-block" href="https://www.instagram.com/directorio247/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/instagram.jpg" alt=""><small class="h5 float-center">Instagram</small></a>
       </div>
       <div class="text-center text-light mt-3"><h4>@directorio247</h4></div>
+      <div class="text-center justify-content-center align-self-center pt-3 ">
+        <video width="320" height="240" controls>
+          <source src="img/Bienvenida Directorio247.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+
+      
     </section>
     <!--JAVA SCRIPT BOOTSTRAP va justo antes de terminar el body para evitar relentizar la pagina al cargarse-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
