added ico to nav and link to call

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
+    <link  rel="icon"   href="img/Logo-nav-links-directorio247.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LinksD247</title>
     
@@ -21,7 +22,7 @@
           </figure>
       </div>
       <div class="content-links container">
-        <a class="btn btn-outline-light btn-block" href="tlf:+584141584350" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/Telefono.png" alt=""><small class="h5 float-center">Llamar</small></a>
+        <a class="btn btn-outline-light btn-block" href="tel:+584141584350" target="" role="button"><img class="rounde-circle mb-2 float-left" src="img/Telefono.png" alt=""><small class="h5 float-center">Llama ahora</small></a>
         <a class="btn btn-outline-light btn-block" href="mailto:directorio247@gmail.com" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/Gmail.jpg" alt=""><small class="h5 float-center">Email</small></a>
         <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+584141584350&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Gerencia de Servicios</small></a>
         <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+34691387184&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Dep. de Desarrollo</small></a>
