--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="btn btn-outline-light btn-block" href="mailto:directorio247@gmail.com" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/Gmail.jpg" alt=""><small class="h5 float-center">Email</small></a>
         <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+584147280702&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Gerencia de Servicios</small></a>
         <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+34691387184&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Dep. de Desarrollo</small></a>
-        <a class="btn btn-outline-light btn-block" href="https://directorio247.com/properties/category/casas/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/casa.png" alt=""><small class="h5 float-center">Casas en venta</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://directorio247.com/properties/category/casas/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/casa.png" alt=""><small class="h5 float-center">Inmuebles</small></a>
       </div>
       <div class="text-center text-light mt-3"><h4>@directorio247 / www.directorio247.com</h4></div>
       <div class="text-center justify-content-center align-self-center pt-3 ">
