modifien img call, size text head, and links position

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     <section class=" call-to-acction background-overlay">
       <div class="text-center justify-content-center align-self-center pt-3 ">
           <figure>
-            <img class="img-top" src="img/nav-original.png" alt="Logo Directorio247">
+            <img class="img-top" src="img/Logo-nav-links-directorio247.png" alt="Logo Directorio247">
             <figcaption class="figure-caption text-center mt-2">Para más información clic en cualquier enlace de abajo, un gusto poder atenderte.</figcaption>
           </figure>
       </div>
       <div class="content-links container">
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/" target="" role="button"><img class="rounde-circle mb-2 float-left" src="img/nav-original.png" alt=""><small class="h5 float-center">Directorio</small></a>
-        <a class="btn btn-outline-light btn-block" href="tel:+584147280702" target="" role="button"><img class="rounde-circle mb-2 float-left" src="img/Telefono.png" alt=""><small class="h5 float-center">Llama ahora</small></a>
-        <a class="btn btn-outline-light btn-block" href="mailto:directorio247@gmail.com" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/Gmail.jpg" alt=""><small class="h5 float-center">Email</small></a>
-        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+584147280702&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Gerencia de Servicios</small></a>
-        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+34691387184&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Dep. de Desarrollo</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://directorio247.com/publicaciones/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/anuncio.png" alt=""><small class="h5 float-center">Publicaciones</small></a>
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/properties/category/casas/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/casa.png" alt=""><small class="h5 float-center">Inmuebles</small></a>
+        <a class="btn btn-outline-light btn-block" href="tel:+584147280702" target="" role="button"><img class="rounde-circle mb-2 float-left" src="img/telephone-call.png" alt=""><small class="h5 float-center">Llama ahora</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+584147280702&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Gerencia de Servicios (1)</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+584141584350&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Gerencia de Servicios (2)</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=+34691387184&amp;text=Hola!" target="_blanck"role="button"><img class="rounde-circle mb-2 float-left" src="img/WhatsApp.png" alt=""><small class="h5 float-center">Dep. de Desarrollo</small></a>
+        <a class="btn btn-outline-light btn-block" href="mailto:directorio247@gmail.com" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/Gmail.jpg" alt=""><small class="h5 float-center">Email</small></a>
       </div>
       <div class="text-center text-light mt-3"><h4>@directorio247 / www.directorio247.com</h4></div>
       <div class="text-center justify-content-center align-self-center pt-3 ">
@@ -36,8 +38,6 @@
           Your browser does not support the video tag.
         </video>
       </div>
-
-      
     </section>
     <!--JAVA SCRIPT BOOTSTRAP va justo antes de terminar el body para evitar relentizar la pagina al cargarse-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
