added image phone-call and anuncio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="text-center justify-content-center align-self-center pt-3 ">
           <figure>
             <img class="img-top" src="img/Logo-nav-links-directorio247.png" alt="Logo Directorio247">
-            <figcaption class="figure-caption text-center mt-2">Para más información clic en cualquier enlace de abajo, un gusto poder atenderte.</figcaption>
+            <figcaption class="figure-caption text-center mt-2">Contáctanos, clic en cualquier enlace de abajo, un gusto poder atenderte.</figcaption>
           </figure>
       </div>
       <div class="content-links container">
