added links to events

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="content-links container">
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/" target="" role="button"><img class="rounde-circle mb-2 float-left" src="img/nav-original.png" alt=""><small class="h5 float-center">Directorio</small></a>
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/pymes-evolution/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/empresa.png" alt=""><small class="h5 float-center">Pyme Evolution</small></a>
+        <a class="btn btn-outline-light btn-block" href="https://directorio247.com/eventos/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/anuncio.png" alt=""><small class="h5 float-center">Eventos</small></a>
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/publicaciones/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/anuncio.png" alt=""><small class="h5 float-center">Publicaciones</small></a>
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/properties/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/casa.png" alt=""><small class="h5 float-center">Inmuebles</small></a>
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/category/otros/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/blog.png" alt=""><small class="h5 float-center"> Blog</small></a>
