added link to youtube of jose mejias

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       </div>
       <div class="content-links container">
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/" target="" role="button"><img class="rounde-circle mb-2 float-left" src="img/nav-original.png" alt=""><small class="h5 float-center">Directorio</small></a>
+
+        <a class="btn btn-outline-light btn-block" href="https://www.youtube.com/channel/UCBTNm-MNgPS5-wQaWmQoW6Q" target="" role="button"><img class="rounde-circle mb-2 float-left" src="img/logo-links.jpg" alt=""><small class="h5 float-center">@josemejiasdesarrolloweb</small></a>
+
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/pymes-evolution/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/empresa.png" alt=""><small class="h5 float-center">Pyme Evolution</small></a>
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/events/venezuela/estado-barinas/municipio-barinas/primer-seminario-jiujitsu/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/anuncio.png" alt=""><small class="h5 float-center">Eventos</small></a>
         <a class="btn btn-outline-light btn-block" href="https://directorio247.com/publicaciones/" target="black" role="button"><img class="rounde-circle mb-2 float-left" src="img/anuncio.png" alt=""><small class="h5 float-center">Publicaciones</small></a>
